# rust-silentpayments

./: Cargo.toml  LICENSE  README.md  justfile  nightly-version  send_and_receive_test_vectors.json
.github/workflows/: rust.yml
examples/: create_wallet.rs  custom_parser.rs  find_output.rs
src/: common.rs  error.rs  input.rs  lib.rs  main.rs  receiving.rs  sending.rs  structs.rs  utils.rs
src/utils/: common.rs  hash.rs  receiving.rs  sending.rs
tests/: vector_tests.rs
tests/common/: input.rs  mod.rs  structs.rs  utils.rs
tests/resources/: send_and_receive_test_vectors.json
