[package]
name = "silentpayments"
version = "0.4.1"
authors = ["cygnet <cygnet3@proton.me>"]
license = "MIT"
edition = "2021"
description = "A library for adding BIP352: Silent Payments support to wallets."
homepage = "https://github.com/cygnet3/rust-silentpayments"
repository = "https://github.com/cygnet3/rust-silentpayments"
keywords = ["bitcoin", "secp256k1"]
readme = "README.md"
exclude = ["tests/resources"]

[lib]
name = "silentpayments"
crate-type = ["lib"]

[features]
default = ["sending", "receiving"]
sending = []
receiving = []
secp_28 = ["dep:secp_28"]
secp_29 = ["dep:secp_29"]

[dependencies]
secp_28 = {version = "0.28.1", features = ["rand"], package = "secp256k1", optional = true}
secp_29 = {version = "0.29.1", features = ["rand"], package = "secp256k1", optional = true}
hex = "0.4"
bech32 = "0.9"
bimap = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bitcoin_hashes = "0.13.0"

[dev-dependencies]
rust-bip39 = { version = "1.0.0", features = ["rand"] }
bitcoin ={ version = "0.32.0", features = ["serde"] }
