[package]
name = "silentpayments"
version = "0.5.0"
authors = ["cygnet <cygnet3@proton.me>"]
license = "MIT"
edition = "2021"
description = "A library for adding BIP352: Silent Payments support to wallets."
homepage = "https://github.com/cygnet3/rust-silentpayments"
repository = "https://github.com/cygnet3/rust-silentpayments"
keywords = ["bitcoin", "secp256k1"]
readme = "README.md"
exclude = ["tests/resources"]

[lib]
name = "silentpayments"
crate-type = ["lib"]

[features]
default = ["encode", "sending", "receiving"]
encode = ["dep:bech32"]
serde = ["dep:serde"]
sending = ["dep:bitcoin_hashes", "dep:hex", "encode"]
receiving = ["dep:bitcoin_hashes", "dep:hex", "dep:bimap", "serde", "encode"]

[dependencies]
secp256k1 = {version = "0.29.0", features = ["rand"] }
hex = { version = "0.4", optional = true }
bech32 = { version = "0.9", optional = true }
bimap = { version = "0.6", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
bitcoin_hashes = { version = "0.13.0", optional = true }

[dev-dependencies]
rust-bip39 = { version = "1.0.0", features = ["rand"] }
bitcoin = { version = "0.32.8", features = ["serde"] }
serde_json = "1.0"
